duniverse/menhirLib.20200211/test/static/bad/producer-with-a-positional-name.mly
%start<unit> s
%token A
%%
s: A _1=A { () }
